--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <h1 style="color:red;text-align: center;">Task3 Integration of:</h1>
 
 <ul>
-<h3 style="color:orange;text-align: center; font-size:30px">!Redhat!</h3>
-<h3 style="color:red;text-align: center;font-size:30px">!GitHub!</h3>
-<h3 style="color: blue;text-align: center; font-size:30px">!Jenkins!</h3>
-<h3 style="color:green;text-align: center; font-size:30px">!Docker!</h3>
-<h3 style="color:brown;text-align: center; font-size:30px">!Kubernetes!</h3>
+<h3 style="color:orange;text-align: center; font-size:30px">Redhat</h3>
+<h3 style="color:red;text-align: center;font-size:30px">GitHub</h3>
+<h3 style="color: blue;text-align: center; font-size:30px">Jenkins</h3>
+<h3 style="color:green;text-align: center; font-size:30px">Docker</h3>
+<h3 style="color:brown;text-align: center; font-size:30px">Kubernetes</h3>
 </ul>
+  <h2> Web_Server Rollout using Jenkins Distribute Cluster and Kuberntes. </h2>
 
 </body>
 </html>
