--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body style="background-color:powderblue;">
 
-<h1 style="color:red; text-align: center;">!!! Welcome to Web-Server Testing Site !!!</h1>
+<h1 style="color:red; text-align: center;">!!! Welcome to DevOps CI/CD Task !!!</h1>
 
-<h1 style="color:red;text-align: center;">Task4 Integration of:</h1>
+<h1 style="color:purple;text-align: center;">Task4 Integrating:</h1>
 
 <ul>
 <h3 style="color:orange;text-align: center; font-size:30px">Redhat</h3>
@@ -12,8 +12,8 @@
 <h3 style="color:green;text-align: center; font-size:30px">Docker</h3>
 <h3 style="color:brown;text-align: center; font-size:30px">Kubernetes</h3>
 </ul>
-  <h2 style="color:red;text-align: center; font-size:30px">
-Web_Server Rollout using Jenkins Distribute Cluster and /n Kuberntes deployment resource. </h2>
+  <h2 style="color:yellow;text-align: center; font-size:30px">
+Rollout using Jenkins Distribute Cluster and Kuberntes deployment resource. </h2>
 
 </body>
 </html>
