--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <h3 style="color:green;text-align: center; font-size:30px">Docker</h3>
 <h3 style="color:brown;text-align: center; font-size:30px">Kubernetes</h3>
 </ul>
-  <h2 style="color:yellow;text-align: center; font-size:30px">
-Rollout using Jenkins Distribute Cluster and Kuberntes deployment resource. </h2>
+  <h2 style="color:blue;text-align: center; font-size:30px">
+Web_Server Application Rollout using Jenkins Distribute Cluster and Kuberntes deployment resource. </h2>
 
 </body>
 </html>
