--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:yellow;">
 
 <h1 style="color:red; text-align: center;">!!! Welcome to DevOps CI/CD Task !!!</h1>
 
